[tool.poetry]
name = "intersym"
version = "0.1.0"
description = ""
authors = ["Yanbo Wong <40051361+StevenRCE0@users.noreply.github.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clip = {git = "https://github.com/openai/CLIP.git"}
gradio = "^4.21.0"
ultralytics = "^8.1.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
